<resources>
    <string name="app_name">速配货货主</string>

    <string name="fragment_rationing_button">找  货</string>

    <string name="title_app_name">速配货</string>
    <string name="title_register">注册</string>
    <string name="title_login">登录</string>

    <string name="title_identity_authentication">实名认证</string>
    <string name="title_my_wallet">我的钱包</string>
    <string name="title_feedback">信息反馈</string>
    <string name="title_about">关于速配货</string>
    <string name="title_customer_service">云港客服 0518-82389156</string>

    <string name="title_publish_goods_supply">货源发布</string>
    <string name="title_goods_supply_manager">货源管理</string>
    <string name="title_mobile_verification_launch">身份验证</string>
    <string name="title_mobile_verification_result">验证结果</string>
    <string name="title_deal">配货</string>

    <string name="title_order_form">我的订单</string>

    <string name="view_pager_title_main">首页</string>
    <string name="view_pager_title_message">消息</string>
    <string name="view_pager_title_mine">我的</string>
    <string name="view_pager_title_explore">探索</string>

    <string name="register_button">注 册</string>
    <string name="edit_mobile_number_hint">请输入手机号</string>
    <string name="password_edit_hint">请输入密码</string>
    <string name="password_edit_second_hint">请再次输入密码</string>
    <string name="double_password_different">两次密码不一致</string>
    <string name="info_incomplete">信息不完整</string>
    <string name="no_login">未登录，请先登录</string>
    <string name="data_error">数据异常请重试</string>

    <string name="login_button">登 录</string>
    <string name="activity_login_user_name_hint">请输入用户名/手机号</string>
    <string name="text_name">姓名</string>
    <string name="edit_hint_name">请输入姓名</string>
    <string name="text_id_card">身份证</string>
    <string name="edit_hint_id_card">请输入身份证号</string>
    <string name="text_license_plate_number">车牌号</string>
    <string name="edit_hint_license_plate_number">请输入车牌号</string>
    <string name="text_car_models">车型</string>
    <string name="edit_hint_models">请选择车型</string>
    <string name="text_car_length">车长(米)</string>
    <string name="edit_hint_car_length">请输入或选择车长</string>
    <string name="text_load">载重(吨)</string>
    <string name="edit_hint_load">请输入载重</string>
    <string name="text_driving_license">驾驶证</string>
    <string name="text_driving_permit">行驶证</string>
    <string name="identity_button_title">提交认证</string>
    <string name="exit_login_button">退出登录</string>
    <string name="text_business_card">个人名片</string>

    <string name="text_start_location">始发地</string>
    <string name="text_end_location">目的地</string>
    <string name="edit_start_hint">请选择始发地</string>
    <string name="edit_end_hint">请选择目的地</string>
    <string name="edit_province_hint">省</string>
    <string name="edit_city_hint">市</string>
    <string name="edit_county_hint">区</string>

    <string name="publish_goods_button">确认发布</string>
    <string name="next_button">下一步</string>
    <string name="mobile_verification_edit_hint">请输入司机手机号</string>
    <string name="detailed_start_edit_hint">请输入详细发货地址</string>
    <string name="detailed_end_edit_hint">请输入详细收货地址</string>
    <string name="fee_edit_hint">请输入信息费</string>
    <string name="confirm_deal_button">确认发货</string>
    <string name="update_goods_button">确认修改</string>

    <string name="unit_quality_tons">吨</string>
    <string name="unit_length_meter">米</string>
    <string name="text_goods_name">货物名称</string>
    <string name="edit_goods_name_hint">请输入或选择货物名称</string>
    <string name="text_weight">重量(吨)</string>
    <string name="edit_weight_hint">请输入重量</string>
    <string name="text_volume">体积(方)</string>
    <string name="edit_volume_hint">请输入体积</string>
    <string name="text_mobile_number">手机号</string>
    <string name="text_phone_number">固定电话</string>
    <string name="edit_phone_number_hint">请输入电话号码(包含区号)</string>
    <string name="text_select">选择</string>
    <string name="text_contact">联系人</string>
    <string name="edit_contact_hint">请输入联系人</string>
    <string name="text_distance">距离(公里)</string>
    <string name="edit_distance_hint">请输入大致运输距离</string>

</resources>
