<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/table_layout_row_margin"
            android:layout_marginTop="@dimen/table_layout_row_margin"
            android:orientation="vertical">

            <TableRow
                android:layout_marginTop="@dimen/row_default_divide_height"
                android:background="@android:color/white"
                android:gravity="center"
                android:minHeight="@dimen/edit_default_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_view_default_text_padding_left"
                    android:paddingRight="@dimen/text_view_default_text_padding_right"
                    android:text="@string/text_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>

                <EditText
                    android:id="@+id/activity_identity_authentication_name_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/edit_hint_name"
                    android:paddingLeft="@dimen/edit_default_padding_left"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>

            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/row_default_divide_height"
                android:background="@android:color/white"
                android:gravity="center"
                android:minHeight="@dimen/edit_default_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_view_default_text_padding_left"
                    android:paddingRight="@dimen/text_view_default_text_padding_right"
                    android:text="@string/text_id_card"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>

                <EditText
                    android:id="@+id/activity_identity_authentication_id_card_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:digits="0123456789X"
                    android:maxLength="18"
                    android:gravity="center_vertical"
                    android:hint="@string/edit_hint_id_card"
                    android:inputType="number"
                    android:paddingLeft="@dimen/edit_default_padding_left"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/table_layout_row_margin"
                android:background="@color/white"
                android:gravity="center"
                android:minHeight="@dimen/edit_default_height">

                <TextView
                    android:id="@+id/activity_identity_authentication_id_card_camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:drawableRight="@android:drawable/ic_menu_camera"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/text_view_default_text_padding_left"
                    android:paddingRight="@dimen/text_view_camera_padding_right"
                    android:text="@string/text_id_card"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/row_default_divide_height"
                android:background="@color/white"
                android:gravity="center"
                android:minHeight="@dimen/edit_default_height">

                <TextView
                    android:id="@+id/activity_identity_authentication_business_card_camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:drawableRight="@android:drawable/ic_menu_camera"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_view_default_text_padding_left"
                    android:paddingRight="@dimen/text_view_camera_padding_right"
                    android:text="@string/text_business_card"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_default_text_size"/>
            </TableRow>

            <Button
                android:id="@+id/activity_identity_authentication_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_default_height"
                android:layout_margin="10dp"
                android:background="@color/orange"
                android:text="@string/identity_button_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_default_text_size"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/transparent"/>

        </TableLayout>

    </ScrollView>


</LinearLayout>